--- a/app/survey.html
+++ b/app/survey.html
@@ -15,10 +15,8 @@
     background-size: cover;
     /* background-repeat: no-repeat; */
     content: "";
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: -1;
   }
