the background image is off again, fixed it

--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="css/navbar.css">
   <style type="text/css">
 
-  html {
-    background-image: url("./images/backgrounds-06.jpg");
-    background-repeat: no-repeat;
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
+  body {
+    /* overflow: hidden; */ /* when used scroll doesn't work */
+    margin: 0;
+    font-size: 0.9em;
+    font-family: "georgia";
+    background-image: url("./images/white.jpg");
+    background-size: 100%;
     background-size: cover;
+    /* background-repeat: no-repeat; */
   }
 
   input[type=text] {
