finished index.html survey.html result.html

--- a/app/result.html
+++ b/app/result.html
@@ -29,15 +29,11 @@
 
   <div style="text-align: center;">
     <div class="row">
-      <div class="col-12 empty">
-      </div>
       <div class="col-12">
-        <h1 style="font-family: Georgia; font-size: 20pt; font-weight: bold; padding-bottom: 25px">Your personal result is :</h1>
+        <h1 style="font-family: Georgia; font-size: 16pt; font-weight: bold; margin-top: 5vh;padding-bottom: 25px">Your personal result is :</h1>
       </div>
-      <div class="smavnir col-12">
+      <div class="smavnir col-12" style="margin-bottom: 3vh;">
         ROLE MODEL
-      </div>
-      <div class="col-12 empty">
       </div>
       <div class="col-10"></div>
       <div class="col-2">
@@ -45,7 +41,7 @@
      </div>
      <div class="col-12" align="center">
        <div class="circle">
-        <div style="margin-top: 30px">
+        <div style="margin-top: 3vh;">
           <p style="font-family: Georgia, serif; font-size: 12pt;  color: #fdfefc; z-index: 200; opacity: 1;">tell us more<br>about what you<br>are looking for</p>
         </div>
       </div>
