--- a/app/image.html
+++ b/app/image.html
@@ -5,11 +5,11 @@
   <title>roots</title>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/image.js"></script>
   <script type="text/javascript" src="js/jquery.waterwheelCarousel.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/image.css">
   <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
