--- a/app/survey.html
+++ b/app/survey.html
@@ -10,15 +10,10 @@
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
   <style type="text/css">
 
-  html::after {
-    background-image: url("./images/bg.jpg");
-    background-size: cover;
-    /* background-repeat: no-repeat; */
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
+  body{
+    background-image: url("./images/bglight.png");
+    background-size: cover; 
+    background-repeat: no-repeat;
   }
 
   #logo {
@@ -142,6 +137,7 @@
       <div class="col-12">
         <a id="submit" href="result.html">Submit</a>
       </div>
+      <div style="height: 10vh;"></div>
     </div>
   </div>
   </div>
@@ -149,10 +145,6 @@
     var list1 = document.getElementsByClassName('square1');
     for (var i = 0; i < list1.length; i++)
     {
-      // list[i].addEventListener('onclick', function (event)
-      // {
-
-      // });
       list1[i].addEventListener('click', function (event)
       {
         for (var j = 0; j < list1.length; j++)
