change retype password to confirm password

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
       </div>
       <div>
         <input type="text" name="password" placeholder="Password">
-        <input type="text" name="confirm" placeholder="Retype your password">
+        <input type="text" name="confirm" placeholder="Confirm your password">
       </div>
     </form>
     <div class="signup-container">
