--- a/app/survey.html
+++ b/app/survey.html
@@ -12,7 +12,7 @@
 
   body{
     background-image: url("./images/bglight.png");
-    background-size: cover; 
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
@@ -73,7 +73,14 @@
 </head>
 <body>
   <div class="topnav">
-    <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo"></div>
+    <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo">
+      <script>
+        // returns to home after clicking on logo.
+        document.getElementById("logo").onclick = function() {
+          window.location.href = "index.html";
+          };
+      </script>
+    </div>
     <div id="nav-item">Your Wine Compass</div>
     <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
   </div>
