--- a/app/image.html
+++ b/app/image.html
@@ -21,10 +21,8 @@
       <div id="nav-item">Your Wine Compass</div>
       <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
     </div>
-        <div class="thumbnails-container">
-        </div>
-        <div id="carousel">
-        </div>
+        <div class="thumbnails-container"></div>
+        <div id="carousel"></div>
         <div class="submit-container">
           <a id="submit" href="#">Submit</a>
         </div>
