--- a/app/result.html
+++ b/app/result.html
@@ -7,13 +7,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/result.css">
-  <link rel="stylesheet" href="css/multirange.css">
+  <link rel="stylesheet" href="css/nouislider.css">
   <link rel="stylesheet" href="css/navbar.css">
-  <!-- <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/multirange.js"></script>
+  <script type="text/javascript" src="js/nouislider.js"></script>
   <style>
   #logo {
     width: 4em;
@@ -145,7 +144,7 @@
                 <p>
                   <input type="text" id="pricerange" readonly>
                 </p>
-                <input type="range" multiple value="10,80" id="slider" />
+                <div id="slider" ></div>
               </div>
             </div>
           </div>
@@ -181,6 +180,19 @@
       $("#occasioncontent").css("display","none");
       $("#pricecontent").css("display","block");
     }
+  });
+  var slider = document.getElementById('slider');
+
+  noUiSlider.create(slider, {
+    start: [20, 80],
+    connect: true,
+    range: {
+        'min': 0,
+        'max': 500
+    }
+  });
+  slider.noUiSlider.on("update", function(values){
+    $("#pricerange").val("$" + parseInt(values[0]) + " - $" + parseInt(values[1]));
   });
 </script>
 
