added cursor hand thing to chart, index, recommendation, result, and survey

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -83,7 +83,7 @@
   </head>
   <body>
     <div class="topnav">
-      <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo">
+      <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo" style="cursor: pointer;">
         <script>
           // returns to home after clicking on logo.
           document.getElementById("logo").onclick = function() {
