--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
 <body>
   <div>
     <div class="topnav">
-      <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo">
+      <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo" style="cursor: pointer;">
         <script>
           // returns to home after clicking on logo.
           document.getElementById("logo").onclick = function() {
