--- a/app/result.html
+++ b/app/result.html
@@ -25,7 +25,7 @@
       <script>
         // returns to home after clicking on logo.
         document.getElementById("logo").onclick = function() {
-          window.location.href = "index.html";
+          window.location.href = "result.html";
           };
       </script>
     </div>
