--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     /* background-repeat: no-repeat; */
   }
 
-  input[type=text] {
+  input {
     background: transparent;
     border: none;
     border-bottom: 2px solid white;
@@ -27,7 +27,8 @@
     margin-top: 7em;
     margin-bottom: 0;
     font-size: 1em;
-    font-family: "Avenir"
+    font-family: "Avenir";
+    color: white;
   }
 
   body {
@@ -69,11 +70,10 @@
     <div class="topnav">
       <div id="nav-item"><img src="./images/logorootsblack.svg" id="logo" style="cursor: pointer;">
         <script>
-          // returns to home after clicking on logo.
-          document.getElementById("logo").onclick = function() {
-            window.location.href = "index.html";
-            };
-        </script>
+        // returns to home after clicking on logo.
+document.getElementById("logo").onclick = function() { window.location.href =
+"index.html"; };
+</script>
       </div>
       <div id="nav-item">Your Wine Compass</div>
       <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
@@ -89,8 +89,8 @@
         <input type="text" name="email" placeholder="Email">
       </div>
       <div>
-        <input type="text" name="password" placeholder="Password">
-        <input type="text" name="confirm" placeholder="Confirm your password">
+        <input type="password" name="password" placeholder="Password">
+        <input type="password" name="confirm" placeholder="Confirm your password">
       </div>
     </form>
     <div class="signup-container">
