--- a/app/index.html
+++ b/app/index.html
@@ -8,36 +8,24 @@
   <link rel="stylesheet" href="css/navbar.css">
   <style type="text/css">
 
+
   body {
-    /* overflow: hidden; */ /* when used scroll doesn't work */
-    margin: 0;
-    font-size: 0.9em;
-    font-family: "georgia";
-    background-image: url("./images/white.jpg");
+    font-size: 1em;
+    font-family: "Georgia";
+    background-image: url("./images/backgrounds-06.jpg");
     background-size: 100%;
-    background-size: cover;
-    /* background-repeat: no-repeat; */
   }
 
   input {
     background: transparent;
     border: none;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     margin: 3em;
     margin-top: 7em;
     margin-bottom: 0;
     font-size: 1em;
     font-family: "Avenir";
     color: white;
-  }
-
-  body {
-    /* overflow: hidden; */ /* when used scroll doesn't work */
-    margin: 0;
-    font-size: 0.9em;
-    font-family: "georgia";
-    background-image: url("./images/backgrounds-06.jpg");
-    background-size: 100%;
   }
 
   form {
@@ -59,7 +47,6 @@
   #signup {
     text-decoration: none;
     color: white;
-    font-size: 1em;
     font-family: "Avenir"
   }
 
