--- a/app/login.html
+++ b/app/login.html
@@ -9,20 +9,17 @@
   <style type="text/css">
 
   body {
-    /* overflow: hidden; */ /* when used scroll doesn't work */
     margin: 0;
-    font-size: 0.9em;
-    font-family: "georgia";
-    background-image: url("./images/white.jpg");
+    font-size: 1em;
+    font-family: "Georgia";
+    background-image: url("./images/backgrounds-06.jpg");
     background-size: 100%;
-    background-size: cover;
-    /* background-repeat: no-repeat; */
   }
 
   input {
     background: transparent;
     border: none;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     margin: 3em;
     margin-top: 7em;
     margin-bottom: 0;
@@ -31,19 +28,10 @@
     color: white;
   }
 
-  body {
-    /* overflow: hidden; */ /* when used scroll doesn't work */
-    margin: 0;
-    font-size: 0.9em;
-    font-family: "georgia";
-    background-image: url("./images/backgrounds-06.jpg");
-    background-size: 100%;
-  }
-
   form {
+    display: block;
     padding: 5em;
     text-align: center;
-    display: block;
   }
 
   #info {
@@ -72,7 +60,7 @@
   }
 
   #logo-img {
-    margin-top: 10em;
+    margin-top: 7em;
     text-align: center;
   }
 
@@ -86,11 +74,10 @@
   }
 
   #box {
-    margin-top: 10em;
+    margin-top: 8em;
     border: solid white 1px;
-    width: 50em;
-    height: 60em;
-    /* align-items: center; */
+    width: 48em;
+    height: 56em;
   }
 
 </style>
@@ -111,8 +98,6 @@
       <div id="button"><a href="result.html">Login</a></div>
       <div id="button"><a href="signup.html">Sign up here</a></div>
     </div>
-    <!-- <div style="height: 10vh;">
-    </div> -->
   </div>
 </div>
 </body>
