redirect create account to signup.html

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -249,7 +249,7 @@
       const createAccount_div = document.createElement('div');
       recommendation_div.appendChild(createAccount_div);
       const createAccount = document.createElement('div');
-      createAccount.innerHTML = `<p>To access our special cellar, subscribe to Roots Premium</p><button id="button" onclick="location.href='index.html'">Create an account</button>`;
+      createAccount.innerHTML = `<p>To access our special cellar, subscribe to Roots Premium</p><button id="button" onclick="location.href='signup.html'">Create an account</button>`;
       createAccount_div.appendChild(createAccount);
 
       container.appendChild(recommendation_div);
