--- a/app/welcome.html
+++ b/app/welcome.html
@@ -74,15 +74,19 @@
     padding-left: 0;
     padding-right: 0;
     margin-top: 7pt;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 3vw;
+    margin-right: 3vw;
   }
   .fill{
     background-color: #3bdeb3;
   }
   .too{
     display: inline-block;
-    width: 127px;
+    width: 9vw;
+    font-family: 'Avenir Black', sans-serif;
+    font-size: 9pt;
+    font-weight: lighter;
+    color:#fdfefc;
   }
 </style>
 </head>
@@ -109,8 +113,8 @@
         <div class="smavnir col-12" style="margin-bottom: 3vh;">
           How did you like the Elouan Pinot Noir?
         </div>
-        <div class="col-4"></div>
-        <div class="col-4">
+        <div class="col-3"></div>
+        <div class="col-6">
           <div class="mt-3">
             <div class="row" style="padding-left: 4vw; padding-right: 4vw;">
               <div class="col stardiv">
@@ -131,7 +135,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4"></div>
+        <div class="col-3"></div>
         <div class="smavnir col-12 wrong" style="margin-top: 3vh; display: none; opacity: 0;">
           What went wrong ?
         </div>
@@ -148,11 +152,11 @@
             <div class="col-3"></div>
             <div class="col-3"></div>
             <div class="col-6">
-              <div class="col smavnir too">too sweet</div>
-              <div class="col smavnir too">too heavy</div>
-              <div class="col smavnir too">too bitter</div>
-              <div class="col smavnir too">too light</div>
-              <div class="col smavnir too">too rough</div>
+              <div class="col too">too sweet</div>
+              <div class="col too">too heavy</div>
+              <div class="col too">too bitter</div>
+              <div class="col too">too light</div>
+              <div class="col too">too rough</div>
             </div>
             <div class="col-3"></div>
           </div>
