--- a/app/welcome.html
+++ b/app/welcome.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/navbar.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <style type="text/css">
+  #logo {
+    width: 4em;
+  }
 
   body {
     /* overflow: hidden; */ /* when used scroll doesn't work */
@@ -23,7 +26,6 @@
   .smavnir{
     font-family: 'Avenir Black', sans-serif;
     font-size: 12pt;
-    font-weight: lighter;
     color:#fdfefc;
   }
 
@@ -70,22 +72,18 @@
     border: solid 1px #3bdeb3;
     height:20pt;
     width: 20pt;
-    display: inline-block;
     padding-left: 0;
     padding-right: 0;
-    margin-top: 7pt;
-    margin-left: 3vw;
-    margin-right: 3vw;
+    margin:auto;
   }
   .fill{
     background-color: #3bdeb3;
   }
   .too{
-    display: inline-block;
+    margin-top: 1vh;
     width: 9vw;
     font-family: 'Avenir Black', sans-serif;
     font-size: 9pt;
-    font-weight: lighter;
     color:#fdfefc;
   }
 </style>
@@ -108,7 +106,7 @@
     <div style="text-align: center;">
       <div class="row">
         <div class="col-12">
-          <h1 class="bigwelcome">Welcome back<br>Luke!</h1>
+          <h1 class="bigwelcome">Welcome back !</h1>
         </div>
         <div class="smavnir col-12" style="margin-bottom: 3vh;">
           How did you like the Elouan Pinot Noir?
@@ -142,30 +140,38 @@
         <div class="col-12 wrong" style="margin-top: 3vh; display: none; opacity: 0;">
           <div class="row">
             <div class="col-3"></div>
-            <div class="col-6">
-              <div class="col square"></div>
-              <div class="col square"></div>
-              <div class="col square"></div>
-              <div class="col square"></div>
-              <div class="col square"></div>
-            </div>
-            <div class="col-3"></div>
-            <div class="col-3"></div>
-            <div class="col-6">
-              <div class="col too">too sweet</div>
-              <div class="col too">too heavy</div>
-              <div class="col too">too bitter</div>
-              <div class="col too">too light</div>
-              <div class="col too">too rough</div>
+            <div class="col-6"">
+                <div class="mt-3">
+                  <div style="display: inline-block;">
+                    <div class="col square"></div>
+                    <div class="col too">too sweet</div>
+                  </div>
+                  <div style="display: inline-block;">
+                    <div class="col square"></div>
+                    <div class="col too">too heavy</div>
+                  </div>
+                  <div style="display: inline-block;">
+                    <div class="col square"></div>
+                    <div class="col too">too bitter</div>
+                  </div>
+                  <div style="display: inline-block;">
+                    <div class="col square"></div>
+                    <div class="col too">too light</div>
+                  </div>
+                  <div style="display: inline-block;">
+                    <div class="col square"></div>
+                    <div class="col too">too rough</div>
+                  </div>
+                </div>
             </div>
             <div class="col-3"></div>
           </div>
         </div>
-        <div class="col-12" id="sumbmitcol" style="margin-top: 3vh;height: 36px; display: none; opacity: 0;">
-          <a id="submit" href="#" >Submit</a>
+        <div class="col-12" id="sumbmitcol" style="margin-top: 6vh;height: 36px; display: none; opacity: 0;">
+          <a id="submit" href="thankyou.html" >Submit</a>
         </div>
         <div class="smavnir col-12" id="havent" style="position: absolute; bottom: 50px; height: 36px;">
-          <a href="#" style="text-decoration: none; color: inherit;">I have not tried it yet</a>
+          <a href="result.html" style="text-decoration: none; color: inherit;">I have not tried it yet</a>
         </div>
     </div>
 
