color change on welcome and survery

--- a/app/survey.html
+++ b/app/survey.html
@@ -29,7 +29,7 @@
     height: 100px;
   }
   .square1{
-    border: solid 1px #3bdeb3;
+    border: solid 1px #3dbeb3;
     height:20pt;
     width: 20pt;
     display: inline-block;
@@ -37,7 +37,7 @@
     margin-left: 10px;
   }
   .square2{
-    border: solid 1px #3bdeb3;
+    border: solid 1px #3dbeb3;
     height:20pt;
     width: 20pt;
     display: inline-block;
@@ -45,7 +45,7 @@
     margin-left: 10px;
   }
   .fill{
-    background-color: #3bdeb3;
+    background-color: #3dbeb3;
   }
 
   #submit {
