--- a/app/welcome.html
+++ b/app/welcome.html
@@ -69,7 +69,7 @@
   }
 
   .square{
-    border: solid 1px #3bdeb3;
+    border: solid 1px #3dbeb3;
     height:20pt;
     width: 20pt;
     padding-left: 0;
@@ -77,7 +77,7 @@
     margin:auto;
   }
   .fill{
-    background-color: #3bdeb3;
+    background-color: #3dbeb3;
   }
   .too{
     margin-top: 1vh;
