rerouted the redirection links to the proper places for chart, image, index, recommendation, result, thankyou, and welcome

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
 
     </form>
     <div class="button-container">
-      <div id="button"><a href="result.html">Login</a></div>
+      <div id="button"><a href="welcome.html">Login</a></div>
       <div id="button"><a href="signup.html">Sign up here</a></div>
     </div>
   </div>
