--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -87,12 +87,12 @@
         <script>
           // returns to home after clicking on logo.
           document.getElementById("logo").onclick = function() {
-            window.location.href = "result.html";
+            window.location.href = "index.html";
             };
         </script>
       </div>
       <div id="nav-item">Your Wine Compass</div>
-      <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
+      <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="result.html"><i class="fa fa-user"></i></a></div>
     </div>
 
     <div id="body">
