--- a/app/thankyou.html
+++ b/app/thankyou.html
@@ -70,7 +70,7 @@
         </script>
       </div>
       <div id="nav-item">Your Wine Compass</div>
-      <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="#"><i class="fa fa-user"></i></a></div>
+      <div id="nav-item"><a href="#"><i class="fa fa-search"></i></a><a href="result.html"><i class="fa fa-user"></i></a></div>
     </div>
 
     <div style="text-align: center;">
@@ -80,7 +80,7 @@
         </div>
         <div class="smavnir col-12" style="margin-top: 4vh;">
           Your feedback will help us recommend you<br>an even better wine next time!
-        </div>     
+        </div>
         <div class="col-12" id="sumbmitcol" style="margin-top: 6vh;height: 36px;">
           <a id="submit" href="result.html" >Back to Profile</a>
         </div>
