--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -20,7 +20,7 @@
   		  font-family: "georgia";
         background-image: url("./images/white.jpg");
         background-size: 100%;
-        background-size: cover;
+        /* background-size: cover; */
         /* background-repeat: no-repeat; */
   		}
 
@@ -296,7 +296,7 @@
         const tastingNotes_div = document.createElement('div');
         recommendation_div.appendChild(tastingNotes_div);
         const tastingNotes = document.createElement('div');
-        tastingNotes.innerHTML = `<p>${wine.tasting_notes}</p><button id="button">Find it around you</button>`;
+        tastingNotes.innerHTML = `<p>${wine.tasting_notes}</p><button id="button" onclick="location.href='map.html'">Find it around you</button>`;
         tastingNotes_div.appendChild(tastingNotes);
 
         return recommendation_div;
