only recommend 2 wines or fewer

--- a/app/recommendation.html
+++ b/app/recommendation.html
@@ -220,12 +220,15 @@
 
     fillRecommendationHTML = (recommendation) => {
       const container = document.getElementById('recommendation-container');
-      // const div = document.getElementById('recommendation');
+      let counter = 0;
       recommendation.forEach(wine => {
         recommendation_node = createRecommendationHTML(wine);
         if (recommendation_node) {
-          container.appendChild(createRecommendationHTML(wine));
-          container.appendChild(document.createElement('hr'));
+          counter += 1;
+          if (counter < 3) {
+            container.appendChild(createRecommendationHTML(wine));
+            container.appendChild(document.createElement('hr'));
+          }
         }
 
       });
